// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/List Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <ul
      class="sc-dFBvSl sc-gILjgf kxKbhD fqIHXZ sc-euUmMu dzABRq"
    >
      <li>
        <div
          class="sc-fKwCjr fXUfSH sc-bCgmGQ jeUYnT"
        >
          You can put 
          <a
            class="sc-eGZQJn bLnTyJ sc-ctiUpC gMbSSC"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKwCjr fXUfSH sc-bCgmGQ jeUYnT"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKwCjr fXUfSH sc-bCgmGQ jeUYnT"
        >
          Multiline text
          <div
            class="sc-fKwCjr fXUfSH sc-bCgmGQ jeUYnT"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Core/List Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <ol
      class="sc-dFBvSl sc-brKzyA kxKbhD kfcboB sc-euUmMu dzABRq"
    >
      <li>
        <div
          class="sc-fKwCjr fXUfSH sc-bCgmGQ jeUYnT"
        >
          You can put 
          <a
            class="sc-eGZQJn bLnTyJ sc-ctiUpC gMbSSC"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKwCjr fXUfSH sc-bCgmGQ jeUYnT"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKwCjr fXUfSH sc-bCgmGQ jeUYnT"
        >
          Multiline text
          <div
            class="sc-fKwCjr fXUfSH sc-bCgmGQ jeUYnT"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
